--- a/bilety.ipynb
+++ b/bilety.ipynb
@@ -103,7 +103,7 @@
     "\\\n",
     "``` python -m venv venv  # Создание окружения ``` \\\n",
     "```source venv/bin/activate  # Активация (для Linux/macOS)``` \\\n",
-    "```pip install -r requirements.txt  # Установка зависимостей ``` \\\n",
+    "```pip install -r requirements.txt  # Установка зависимостей ``` \n",
     "\n",
     "Важные нюансы:\n",
     "- Не добавляйте ```venv``` в Git (добавьте в ```.gitignore```). \n",
@@ -137,6 +137,100 @@
     "##### Пример задачи, для решения которой целесообразно использовать NumPy:\n",
     "__Задача__: Вычисление скалярного произведения векторов."
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "af2574a1",
+   "metadata": {},
+   "source": [
+    "Решение без NumPy:"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 1,
+   "id": "74ef7c63",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "32\n"
+     ]
+    }
+   ],
+   "source": [
+    "def dot_product(a, b):\n",
+    "    return sum(x * y for x, y in zip(a, b))\n",
+    "\n",
+    "a = [1, 2, 3]\n",
+    "b = [4, 5, 6]\n",
+    "print(dot_product(a, b))  # 1*4 + 2*5 + 3*6 = 32"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "42df66ce",
+   "metadata": {},
+   "source": [
+    "Решение с NumPy:"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
+   "id": "f6358d09",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import numpy as np"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "id": "a27376f1",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "32\n"
+     ]
+    }
+   ],
+   "source": [
+    "a = np.array([1, 2, 3])\n",
+    "b = np.array([4, 5, 6])\n",
+    "print(np.dot(a, b))  # 32"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "849c6164",
+   "metadata": {},
+   "source": [
+    "__Почему NumPy лучше?__\n",
+    "- Код короче и читаемее.\n",
+    "- Операция выполняется в 10–100 раз быстрее для больших массивов.\n",
+    "- Поддержка многомерных массивов и сложных операций (например, умножение матриц).\n",
+    "\n",
+    "__Когда использовать NumPy?__\n",
+    "- Работа с большими массивами данных.\n",
+    "- Математические операции (линейная алгебра, статистика).\n",
+    "- Машинное обучение"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "7d825d34",
+   "metadata": {},
+   "source": [
+    "_4. Массивы NumPy. Отличие массивов NumPy от списков Python: \n",
+    "строгая типизация элементов, хранение элементов в памяти._"
+   ]
   }
  ],
  "metadata": {
@@ -146,7 +240,15 @@
    "name": "python3"
   },
   "language_info": {
+   "codemirror_mode": {
+    "name": "ipython",
+    "version": 3
+   },
+   "file_extension": ".py",
+   "mimetype": "text/x-python",
    "name": "python",
+   "nbconvert_exporter": "python",
+   "pygments_lexer": "ipython3",
    "version": "3.11.1"
   }
  },
