--- a/bilety.ipynb
+++ b/bilety.ipynb
@@ -231,6 +231,120 @@
     "_4. Массивы NumPy. Отличие массивов NumPy от списков Python: \n",
     "строгая типизация элементов, хранение элементов в памяти._"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "4b6aa052",
+   "metadata": {},
+   "source": [
+    "1. __Типизация элементов__\n",
+    "\n",
+    "- Списки Python: \\\n",
+    "\\\n",
+    "Могут содержать элементы разных типов (гетерогенные). Например, в одном списке можно хранить целые числа, строки и объекты одновременно:"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "id": "fa82b77d",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "py_list = [1, \"текст\", 3.14, True]  # Корректно"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "6802d246",
+   "metadata": {},
+   "source": [
+    "- Массивы NumPy: \\\n",
+    "\\\n",
+    "Все элементы массива должны быть одного типа (гомогенные). При создании массива разные типы приводятся к общему:"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
+   "id": "3ebaeb14",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "float64\n"
+     ]
+    }
+   ],
+   "source": [
+    "np_array = np.array([1, 2.5, 3])  # Все элементы станут float64\n",
+    "print(np_array.dtype)  # → float64"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "e159c284",
+   "metadata": {},
+   "source": [
+    "Преобразование в случае смешении типов происходит по следующим правилам: \\\n",
+    "\\\n",
+    "Если ```str + любой другой тип```, то все элементы сводятся к ```str``` \\\n",
+    "Если ```float + int/bool -> float``` \\\n",
+    "Если ```int + bool -> int``` \\\n",
+    "\\\n",
+    "В случае явного указания типа через ```dtype``` NumPy либо преобразует их с потерей информации, либо выдаст ошибку:"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "8a6bee82",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Попытка сохранить строку как число → ValueError\n",
+    "arr = np.array([\"текст\", 1, 2.5], dtype=np.float64)\n",
+    "print(arr)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "fd3aa578",
+   "metadata": {},
+   "source": [
+    "2. __Организация хранения в памяти__\n",
+    "\n",
+    "- Списки Python: \\\n",
+    "\\\n",
+    "Хранят ссылки на объекты в разных участках памяти. Каждый элемент требует дополнительной памяти для хранения информации о типе и других служебных данных.\n",
+    "\n",
+    "- Массивы NumPy: \\\n",
+    "\\\n",
+    "Данные хранятся в непрерывном блоке памяти как единый двоичный поток. Это позволяет эффективно использовать кеш процессора и оптимизирует вычисления.\n",
+    "\n",
+    "3. __Производительность операций__\n",
+    "\n",
+    "- Списки Python: \\\n",
+    "\\\n",
+    "Операции выполняются медленнее, так как для каждого элемента нужно проверять тип и выполнять дополнительные действия.\n",
+    "\n",
+    "- Массивы NumPy: \\\n",
+    "\\\n",
+    "Операции векторизованы и выполняются на низком уровне (на C), что дает значительный прирост скорости.\n",
+    "\n",
+    "4. __Размер и изменяемость__\n",
+    "\n",
+    "- Списки Python: \\\n",
+    "\\\n",
+    "Размер может динамически изменяться, добавление и удаление элементов выполняется эффективно.\n",
+    "\n",
+    "- Массивы NumPy: \\\n",
+    "\\\n",
+    "Размер фиксируется при создании. Для изменения размера нужно создавать новый массив, что может быть затратно по памяти.\n",
+    "\n"
+   ]
   }
  ],
  "metadata": {
