--- a/bilety.ipynb
+++ b/bilety.ipynb
@@ -345,6 +345,253 @@
     "Размер фиксируется при создании. Для изменения размера нужно создавать новый массив, что может быть затратно по памяти.\n",
     "\n"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "a12c656a",
+   "metadata": {},
+   "source": [
+    "_5.Основные способы создания массивов NumPy: функции для создания массивов NumPy из объектов Python, функции для \\\n",
+    "создания массивов NumPy с нуля._"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "193cd830",
+   "metadata": {},
+   "source": [
+    "##### Функции для создания массивов NumPy из объектов Python\n",
+    "\n",
+    "1. Из списка (list)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "9adc73dc",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "arr = np.array([1, 2, 3])  # 1D массив\n",
+    "matrix = np.array([[1, 2], [3, 4]])  # 2D массив"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "02c60260",
+   "metadata": {},
+   "source": [
+    "2. Из кортежа (tuple)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "905aacdd",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "arr = np.array((1, 2, 3))  # Аналогично списку"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "104dfe53",
+   "metadata": {},
+   "source": [
+    "3. Из других итерируемых объектов"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "c73caa3d",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "arr = np.array(range(5))  # [0, 1, 2, 3, 4]"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "a2fca673",
+   "metadata": {},
+   "source": [
+    "##### Функции для создания массивов NumPy с нуля.\n",
+    "\n",
+    "1. Массивы с заполнением \n",
+    "- ```zeros()``` - массив из нулей:"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "8e8d15a9",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "np.zeros(5)  # [0., 0., 0., 0., 0.]\n",
+    "np.zeros((2, 3))  # 2x3 матрица нулей"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "0b65d16c",
+   "metadata": {},
+   "source": [
+    "- ```ones()``` - массив из единиц:"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "e0161f01",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "np.ones(4)  # [1., 1., 1., 1.]"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "2975c869",
+   "metadata": {},
+   "source": [
+    "- ```full()``` - массив с заданным значением:"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "d2f3d109",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "np.full((2, 2), 7)  # [[7, 7], [7, 7]]"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "4afc8cba",
+   "metadata": {},
+   "source": [
+    "2. Последовательности\n",
+    "- ```arange()``` - аналог ```range()```:"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "2a55fa60",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "np.arange(5)  # [0, 1, 2, 3, 4]\n",
+    "np.arange(1, 10, 2)  # [1, 3, 5, 7, 9]"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "eb002514",
+   "metadata": {},
+   "source": [
+    "- ```linspace()``` - линейно распределенные значения:"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "f363a769",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "np.linspace(0, 1, 5)  # [0., 0.25, 0.5, 0.75, 1.]"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "d6d1ecf4",
+   "metadata": {},
+   "source": [
+    "3. Специальные массивы\n",
+    "- ```eye()``` - единичная матрица:"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "e6ed5304",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "np.eye(3)  # 3x3 единичная матрица"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "6e4bd349",
+   "metadata": {},
+   "source": [
+    "- ```diag()``` - диагональная матрица:"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "b24305b9",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "np.diag([1, 2, 3])  # [[1,0,0], [0,2,0], [0,0,3]]"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "b06a66e1",
+   "metadata": {},
+   "source": [
+    "4. Случайные массивы"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "8bbaf2de",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "np.random.rand(3)  # 3 случайных числа [0,1)\n",
+    "np.random.randn(2, 2)  # 2x2 нормальное распределение\n",
+    "np.random.randint(0, 10, size=5)  # 5 целых чисел [0,10)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "5ebe0c14",
+   "metadata": {},
+   "source": [
+    "5. Особые случаи\n",
+    "- пустые массивы"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "76619b37",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "np.empty(3)  # Массив без инициализации (значения - \"мусор\")"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "db92b827",
+   "metadata": {},
+   "source": [
+    "_6.Основные атрибуты массивов NumPy. Различные виды \n",
+    "индексации массивов NumPy._"
+   ]
   }
  ],
  "metadata": {
