--- a/bilety.ipynb
+++ b/bilety.ipynb
@@ -592,6 +592,361 @@
     "_6.Основные атрибуты массивов NumPy. Различные виды \n",
     "индексации массивов NumPy._"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "fabe3eb0",
+   "metadata": {},
+   "source": [
+    "##### Основные атрибуты массивов NumPy\n",
+    "1. ```ndim``` — количество измерений (осей) массива."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 13,
+   "id": "c0f4f4cc",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "2\n"
+     ]
+    }
+   ],
+   "source": [
+    "a = np.array([[1, 2, 3], [4, 5, 6]])\n",
+    "print(a.ndim)  # Вывод: 2"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "5cb91987",
+   "metadata": {},
+   "source": [
+    "2. ```shape``` — размеры массива, представленные в виде кортежа. Например, для матрицы из n строк и m столбцов ```shape``` будет ```(n, m)```."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 14,
+   "id": "509e226b",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "(2, 3)\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(a.shape)  # Вывод: (2, 3)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "47b7dcbd",
+   "metadata": {},
+   "source": [
+    "3. ```size``` — общее количество элементов в массиве, равное произведению всех элементов кортежа ```shape```."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 15,
+   "id": "25ce464d",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "6\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(a.size)  # Вывод: 6"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "7230e6f6",
+   "metadata": {},
+   "source": [
+    "4. ```dtype``` — тип данных элементов массива."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 16,
+   "id": "ca4731c8",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "int64\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(a.dtype)  # Вывод: int64"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "ac6e837c",
+   "metadata": {},
+   "source": [
+    "5. ```itemsize``` — размер каждого элемента массива в байтах."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "4d13228e",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "print(a.itemsize)  # Вывод: 8"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "f14e5c3c",
+   "metadata": {},
+   "source": [
+    "6. ```nbytes``` — общее количество байт, занимаемое массивом."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "90e6a06b",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "print(a.nbytes)  # Вывод: 48"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "c5983976",
+   "metadata": {},
+   "source": [
+    "7. ```T``` — транспонированный массив (строки становятся столбцами и наоборот)."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "bfc796e7",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "print(a.T)\n",
+    "# Вывод:\n",
+    "# [[1 4]\n",
+    "#  [2 5]\n",
+    "#  [3 6]]"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "9b14f4e0",
+   "metadata": {},
+   "source": [
+    "8. ```flat``` — итератор, позволяющий перебирать все элементы массива."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "f893b745",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "for element in a.flat:\n",
+    "    print(element, end=\" \")  # Вывод: 1 2 3 4 5 6"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "fdae243d",
+   "metadata": {},
+   "source": [
+    "9. ```real``` и ```imag``` — возвращают действительную и мнимую части элементов массива, соответственно, если массив содержит комплексные числа."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "0814fcbc",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "complex_array = np.array([1 + 2j, 3 + 4j])\n",
+    "print(complex_array.real)  # Вывод: [1. 3.]\n",
+    "print(complex_array.imag)  # Вывод: [2. 4.]"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "e3d37407",
+   "metadata": {},
+   "source": [
+    "##### Различные виды индексации массивов NumPy\n",
+    "\n",
+    "1. Индексация с помощью целых чисел\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "7cdd917e",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "b = np.array([[1, 2], [3, 4], [5, 6]])\n",
+    "print(b[1, 0])  # Вывод: 3"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "4a054d10",
+   "metadata": {},
+   "source": [
+    "2. Индексация с помощью срезов (slicing)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "5a724e52",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "d = np.array([[1, 2, 3], [4, 5, 6], [7, 8, 9]])\n",
+    "print(d[1:, :2])  # Вывод: [[4 5]\n",
+    "                  #          [7 8]]"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "b7f9da54",
+   "metadata": {},
+   "source": [
+    "3. Индексация с использованием отрицательных индексов"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "826e8254",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "f = np.array([[1, 2], [3, 4], [5, 6]])\n",
+    "print(f[-1, -1])  # Вывод: 6"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "ae395612",
+   "metadata": {},
+   "source": [
+    "4. Булевая индексация\n",
+    "\n",
+    "Используется для фильтрации элементов массива:\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "184949dc",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "g = np.array([10, 20, 30, 40, 50])\n",
+    "mask = g > 30\n",
+    "print(g[mask])  # Вывод: [40 50]"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "f6f9db11",
+   "metadata": {},
+   "source": [
+    "5. Индексация с использованием массивов индексов"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "469d3aca",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "h = np.array([10, 20, 30, 40, 50])\n",
+    "indices = [0, 2, 4]\n",
+    "print(h[indices])  # Вывод: [10 30 50]"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "b2a3e649",
+   "metadata": {},
+   "source": [
+    "6. Индексация с использованием структурированных массивов\n",
+    "\n",
+    "Если массив имеет именованные поля, можно обращаться к ним по имени:"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "392f181f",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "i = np.array([(1, 2), (3, 4), (5, 6)], dtype=[('a', np.int32), ('b', np.int32)])\n",
+    "print(i['a'])  # Вывод: [1 3 5]"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "95baa24b",
+   "metadata": {},
+   "source": [
+    "7. Индексация с использованием итератора ```flat```"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "f74025d5",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "j = np.array([[1, 2], [3, 4], [5, 6]])\n",
+    "for element in j.flat:\n",
+    "    print(element, end=\" \")  # Вывод: 1 2 3 4 5 6"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "f506fb7e",
+   "metadata": {},
+   "source": [
+    "__Примечание:__\n",
+    "- При использовании срезов создается представление исходного массива, а не его копия. Это означает, что изменения в срезе отразятся на исходном массиве. Чтобы создать независимую копию, используйте метод ```.copy()```."
+   ]
   }
  ],
  "metadata": {
