--- a/bilety.ipynb
+++ b/bilety.ipynb
@@ -179,7 +179,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 2,
    "id": "f6358d09",
    "metadata": {},
    "outputs": [],
@@ -946,6 +946,145 @@
    "source": [
     "__Примечание:__\n",
     "- При использовании срезов создается представление исходного массива, а не его копия. Это означает, что изменения в срезе отразятся на исходном массиве. Чтобы создать независимую копию, используйте метод ```.copy()```."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "e5f75d27",
+   "metadata": {},
+   "source": [
+    "_7. Управление размерами массивов NumPy: методы reshape и flatten, \n",
+    "объект newaxis._\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "f1a319fd",
+   "metadata": {},
+   "source": [
+    "1. Изменение формы массива (```reshape```) \\\n",
+    "Метод reshape создает новый массив с другой формой, не изменяя исходные данные.\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "1f82bdef",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "arr = np.arange(12)  # [0, 1, 2, ..., 11]\n",
+    "matrix = arr.reshape(3, 4) # 3 строки × 4 столбца\n",
+    "print(matrix)\n",
+    "\"\"\"\n",
+    "[[ 0  1  2  3]\n",
+    " [ 4  5  6  7]\n",
+    " [ 8  9 10 11]]\n",
+    "\"\"\""
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "75d90c92",
+   "metadata": {},
+   "source": [
+    "Автоматическое вычисление размерности:"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "c92bae41",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "arr.reshape(3, -1)  # -1 означает \"вычислить автоматически\""
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "42edc058",
+   "metadata": {},
+   "source": [
+    "2. Преобразование в одномерный массив (```flatten```, ```ravel```) \n",
+    "\n",
+    "```flatten()```: \n",
+    "- Создает копию данных\n",
+    "- Всегда возвращает 1D массив"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "4c6e4ee5",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "matrix = np.array([[1, 2], [3, 4]])\n",
+    "flat = matrix.flatten()  # [1, 2, 3, 4]"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "4fc01c8a",
+   "metadata": {},
+   "source": [
+    "```ravel()```:\n",
+    "- Возвращает представление {т.е. не копию} (где возможно)\n",
+    "- Более эффективен по памяти"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "f4927d3e",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "flat_view = matrix.ravel()  # [1, 2, 3, 4]"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "8a5eb262",
+   "metadata": {},
+   "source": [
+    "3. Добавление осей (```newaxis```)\n",
+    "\n",
+    "Объект np.newaxis позволяет добавлять новые оси к массиву:"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "20b6f653",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "arr = np.array([1, 2, 3])\n",
+    "\n",
+    "# Преобразование в вектор-столбец (2D)\n",
+    "col_vector = arr[:, np.newaxis]\n",
+    "\"\"\"\n",
+    "[[1]\n",
+    " [2]\n",
+    " [3]]\n",
+    "\"\"\"\n",
+    "\n",
+    "arr_3d = arr[np.newaxis, :, np.newaxis]\n",
+    "print(arr_3d.shape)  # (1, 3, 1)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "3f5d7479",
+   "metadata": {},
+   "source": [
+    "__Примечание__:\n",
+    "- ```reshape``` может вернуть представление или копию в зависимости от расположения данных в памяти\n",
+    "- ```newaxis``` не копирует данные, только изменяет представление\n",
+    "- Для гарантированного копирования используйте ```.copy()```\n",
+    "\n"
    ]
   }
  ],
