--- a/bilety.ipynb
+++ b/bilety.ipynb
@@ -1086,6 +1086,218 @@
     "- Для гарантированного копирования используйте ```.copy()```\n",
     "\n"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "6912ff2a",
+   "metadata": {},
+   "source": [
+    "_8. Понятие векторизованных операций в NumPy. Основные виды \n",
+    "векторизованных операций. Различия между операторной и \\\n",
+    "функциональной формой векторизованных операций._"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "346695ea",
+   "metadata": {},
+   "source": [
+    "1. Понятие векторизованных операций\n",
+    "Векторизованные операции — это вычисления, выполняемые над целыми массивами без явных циклов. Они реализованы на низкоуровневых языках (C/Fortran).\\\n",
+    "Пример:"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "f3056342",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "<class 'numpy.ndarray'>\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Списки Python (медленно)\n",
+    "a = [1, 2, 3]\n",
+    "b = [4, 5, 6]\n",
+    "result = [x + y for x, y in zip(a, b)]  # [5, 7, 9]\n",
+    "\n",
+    "# NumPy (векторизованно)\n",
+    "a_np = np.array([1, 2, 3])\n",
+    "b_np = np.array([4, 5, 6])\n",
+    "result_np = a_np + b_np  # ndarray([5, 7, 9])"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "f4a420a7",
+   "metadata": {},
+   "source": [
+    "2. Основные виды векторизованных операций\n",
+    "- Арифметические операции \\\n",
+    "Поэлементные операции с массивами одинаковой формы:"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "6886e7d0",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "a = np.array([1, 2, 3])\n",
+    "b = np.array([4, 5, 6])\n",
+    "\n",
+    "print(a + b)  # Сложение: [5, 7, 9]\n",
+    "print(a * b)  # Умножение: [4, 10, 18]\n",
+    "print(a ** 2) # Квадрат: [1, 4, 9]"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "d0971793",
+   "metadata": {},
+   "source": [
+    "- Логические операции \\\n",
+    "Поэлементное сравнение:"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "ea274cbf",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "print(a > 2)   # [False, False, True]\n",
+    "print(a == b)  # [False, False, False]"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "93d9b6fd",
+   "metadata": {},
+   "source": [
+    "- Математические функции \\\n",
+    "Векторизованные версии математических функций:"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "a864b7c3",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "print(np.sin(a))       # Синус: [0.841, 0.909, 0.141]\n",
+    "print(np.log(a + 1))   # Натуральный логарифм\n",
+    "print(np.exp(a))       # Экспонента"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "997f08b2",
+   "metadata": {},
+   "source": [
+    "- Агрегации \\\n",
+    "Операции по всему массиву:"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "9c7ecac8",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "print(np.sum(a))      # Сумма: 6\n",
+    "print(np.mean(b))     # Среднее: 5.0\n",
+    "print(np.max(a - b))  # Максимум разности: -1"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "2a5288f9",
+   "metadata": {},
+   "source": [
+    "3. Операторная и функциональная форма векторизованных операций в NumPy\n",
+    "- Операторная форма \\\n",
+    "Использует стандартные математические операторы (+, -, *, / и др.) для работы с массивами. \\\n",
+    "\\\n",
+    "Характеристики: \n",
+    "    - Использует стандартные математические операторы (+, -, *, / и др.) для работы с массивами.\n",
+    "    - Автоматически применяет broadcasting\n",
+    "\n",
+    "    Ограничения:\n",
+    "    - Не поддерживает дополнительные параметры (например, вывод в существующий массив)\n",
+    "    - Ограниченный набор операций"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 19,
+   "id": "0173e33a",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "\n",
+    "a = np.array([1, 2, 3])\n",
+    "b = np.array([4, 5, 6])\n",
+    "\n",
+    "# Арифметические операции\n",
+    "sum_arr = a + b       # [5, 7, 9]\n",
+    "prod_arr = a * b      # [4, 10, 18]\n",
+    "\n",
+    "# Логические операции\n",
+    "mask = a > 2          # [False, False, True]\n",
+    "\n",
+    "# Со скалярами\n",
+    "scaled = a * 10       # [10, 20, 30]"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "066c24df",
+   "metadata": {},
+   "source": [
+    "- Функциональная форма \\\n",
+    "Использует функции из модуля NumPy (```np.add()```, ```np.multiply()``` и др.). \\\n",
+    "\\\n",
+    "Характеристики:\n",
+    "\n",
+    "    - Более гибкая и мощная \n",
+    "    - Поддерживает дополнительные параметры \n",
+    "    - Позволяет явно контролировать процесс вычислений\n",
+    "\n",
+    "    Преимущества:\n",
+    "    - Поддержка сложных сценариев вычислений\n",
+    "    - Возможность оптимизации памяти (через параметр ```out```)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "0845f9f0",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Эквиваленты операторной формы\n",
+    "sum_func = np.add(a, b)          # [5, 7, 9]\n",
+    "prod_func = np.multiply(a, b)    # [4, 10, 18]\n",
+    "\n",
+    "# Расширенные возможности\n",
+    "result = np.empty_like(a)\n",
+    "np.add(a, b, out=result)         # Результат записывается в существующий массив\n",
+    "\n",
+    "# Специальные операции\n",
+    "np.cumsum(a)                     # Накопленная сумма: [1, 3, 6]\n",
+    "np.logical_and(a > 1, b < 6)     # Логическое И: [False, True, False]"
+   ]
   }
  ],
  "metadata": {
