--- a/bilety.ipynb
+++ b/bilety.ipynb
@@ -1298,6 +1298,100 @@
     "np.cumsum(a)                     # Накопленная сумма: [1, 3, 6]\n",
     "np.logical_and(a > 1, b < 6)     # Логическое И: [False, True, False]"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "1258e62a",
+   "metadata": {},
+   "source": [
+    "_9. Транслирование. Правила транслирования массивов NumPy. \n",
+    "Пример использования транслирования._ "
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "7dcb0a8e",
+   "metadata": {},
+   "source": [
+    "1. Понятие транслирования\n",
+    "\n",
+    "__Транслирование (broadcasting)__ — это механизм NumPy, позволяющий выполнять операции над массивами разной формы путем автоматического расширения меньшего массива до формы большего без копирования данных.\n",
+    "\n",
+    "__Основная идея:__\n",
+    "\n",
+    "\"Растягивание\" массивов вдоль осей размерности 1 для совмещения форм.\n",
+    "\n",
+    "2. Правила транслирования\n",
+    "\n",
+    "- Выравнивание по правому краю \\\n",
+    "Формы сравниваются справа налево: \\\n",
+    "```Массив A (3, 4)``` \\\n",
+    "```Массив B    (4,) → (1, 4) → (3, 4)```\n",
+    "- Совместимость размерностей \\\n",
+    "Размерности считаются совместимыми, если:\n",
+    "    - Размеры равны или\n",
+    "    - Один из размеров равен 1 (и может быть растянут)\n",
+    "- Несовместимость \\\n",
+    "Если размеры не равны и ни один не равен 1 — ошибка: \\\n",
+    "```Массив A (3, 4)``` \\\n",
+    "```Массив B    (3,) → Ошибка (4 != 3 и ни один не 1)```\n",
+    "\n",
+    "3. Примеры"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "eb801e79",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "arr = np.array([[1, 2], [3, 4]])  # (2, 2)\n",
+    "result = arr + 5  # Скаляр 5 → (1,1) → (2,2)\n",
+    "\"\"\"\n",
+    "[[6, 7],\n",
+    " [8, 9]]\n",
+    "\"\"\""
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "2d43aa68",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "vec = np.array([10, 20])        # (2,) → (1,2) → (2,2)\n",
+    "matrix = np.array([[1, 2], \n",
+    "                   [3, 4]])     # (2, 2)\n",
+    "\n",
+    "result = matrix + vec\n",
+    "\"\"\"\n",
+    "[[11, 22],\n",
+    " [13, 24]]\n",
+    "\"\"\""
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "9b49bc6a",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "arr_3d = np.ones((3, 2, 4))    # (3, 2, 4)\n",
+    "vec = np.array([1, 2, 3, 4])    # (4,) → (1,1,4) → (3,2,4)\n",
+    "\n",
+    "result = arr_3d * vec  # Каждый \"слой\" умножается на vec"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "5b860407",
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
