--- a/intro+numpy.ipynb
+++ b/intro+numpy.ipynb
@@ -1386,12 +1386,41 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "5b860407",
+   "cell_type": "markdown",
+   "id": "acd5883e",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "source": [
+    "_10. Операции агрегирования. Основные виды операций агрегирования. \\\n",
+    "Применение операций вдоль определенных измерений многомерного NumPy массива._"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "37ec91fa",
+   "metadata": {},
+   "source": [
+    "1. Понятие операций агрегирования\n",
+    "\n",
+    "Операции агрегирования — это вычисления, которые сжимают данные, преобразуя массив в скалярное значение или массив меньшей размерности. Они позволяют получать сводные статистики (сумма, среднее, максимум и др.) по всем или части элементов массива. \\\n",
+    "__Базовые агрегатные функции__\n",
+    "| Функция         | Описание               | Пример                    |\n",
+    "|-----------------|------------------------|---------------------------|\n",
+    "| ```np.sum()```  | Сумма элементов        | np.sum([1, 2, 3]) → 6     |\n",
+    "| ```np.mean()``` | Среднее значение       | np.mean([1, 2, 3]) → 2.0  |\n",
+    "| ```np.min()```  | Минимальное значение   | np.min([1, 2, 3]) → 1     |\n",
+    "| ```np.max()```  | Максимальное значение  | np.max([1, 2, 3]) → 3     |\n",
+    "| ```np.prod()``` | Произведение элементов | np.prod([1, 2, 3]) → 6    |\n",
+    "| ```np.std()```  | Стандартное отклонение | np.std([1, 2, 3]) → 0.816 |\n",
+    "| ```np.var()```  | Дисперсия              | np.var([1, 2, 3]) → 0.666 |\n",
+    "\n",
+    "__Специальные агрегаторы__\n",
+    "| Функция               | Описание       | Пример                         |\n",
+    "|-----------------------|----------------|--------------------------------|\n",
+    "| ```np.median()```     | Медиана        | np.median([1, 2, 10]) → 2      |\n",
+    "| ```np.percentile()``` | Процентиль     | np.percentile([1,2,3], 50) → 2 |\n",
+    "| ```np.any()```        | Логическое ИЛИ | np.any([True, False]) → True   |\n",
+    "| ```np.all()```        | Логическое И   | np.all([True, False]) → False  |"
+   ]
   }
  ],
  "metadata": {
