made more beautiful

--- a/intro+numpy.ipynb
+++ b/intro+numpy.ipynb
@@ -5,8 +5,7 @@
    "id": "64e86863",
    "metadata": {},
    "source": [
-    "_1. Менеджер пакетов pip. Мотивация использования. Основные \\\n",
-    "команды: install, list, show, freeze, uninstall. Работа с зависимостями Python-проекта._"
+    "# 1. Менеджер пакетов pip. Мотивация использования. Основные команды: install, list, show, freeze, uninstall. Работа с зависимостями Python-проекта."
    ]
   },
   {
@@ -56,8 +55,7 @@
    "id": "271dadd6",
    "metadata": {},
    "source": [
-    "_2. Виртуальное окружение. Мотивация использования. Основы \\\n",
-    "работы с виртуальным окружением с помощью venv._"
+    "# 2. Виртуальное окружение. Мотивация использования. Основы работы с виртуальным окружением с помощью venv."
    ]
   },
   {
@@ -118,8 +116,7 @@
    "id": "1a81e01f",
    "metadata": {},
    "source": [
-    "_3. NumPy. Мотивация использования. Пример задачи, для решения \n",
-    "которой целесообразно использовать NumPy._"
+    "# 3. NumPy. Мотивация использования. Пример задачи, для решения которой целесообразно использовать NumPy."
    ]
   },
   {
@@ -228,8 +225,7 @@
    "id": "7d825d34",
    "metadata": {},
    "source": [
-    "_4. Массивы NumPy. Отличие массивов NumPy от списков Python: \n",
-    "строгая типизация элементов, хранение элементов в памяти._"
+    "# 4. Массивы NumPy. Отличие массивов NumPy от списков Python: строгая типизация элементов, хранение элементов в памяти."
    ]
   },
   {
@@ -351,8 +347,7 @@
    "id": "a12c656a",
    "metadata": {},
    "source": [
-    "_5.Основные способы создания массивов NumPy: функции для создания массивов NumPy из объектов Python, функции для \\\n",
-    "создания массивов NumPy с нуля._"
+    "# 5.Основные способы создания массивов NumPy: функции для создания массивов NumPy из объектов Python, функции для создания массивов NumPy с нуля."
    ]
   },
   {
@@ -589,8 +584,7 @@
    "id": "db92b827",
    "metadata": {},
    "source": [
-    "_6.Основные атрибуты массивов NumPy. Различные виды \n",
-    "индексации массивов NumPy._"
+    "# 6.Основные атрибуты массивов NumPy. Различные виды индексации массивов NumPy."
    ]
   },
   {
@@ -1304,8 +1298,7 @@
    "id": "1258e62a",
    "metadata": {},
    "source": [
-    "_9. Транслирование. Правила транслирования массивов NumPy. \n",
-    "Пример использования транслирования._ "
+    "# 9. Транслирование. Правила транслирования массивов NumPy. Пример использования транслирования."
    ]
   },
   {
@@ -1390,8 +1383,7 @@
    "id": "acd5883e",
    "metadata": {},
    "source": [
-    "_10. Операции агрегирования. Основные виды операций агрегирования. \\\n",
-    "Применение операций вдоль определенных измерений многомерного NumPy массива._"
+    "# 10. Операции агрегирования. Основные виды операций агрегирования. Применение операций вдоль определенных измерений многомерного NumPy массива."
    ]
   },
   {
